--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Head todo la info que es para el navegador y no se ve, salvo el titulo. -->
 	<meta charset="UTF-8">
-	<title>Malicius Culebra</title>
+	<title>Marote</title>
 	<!-- Estilos de Bootstrap que es codigo responsive y visual ya escrito por otro. -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 	<!-- codigo de colores y estilos escrito por nosotros -->
@@ -21,40 +21,37 @@
 		<div class="row top">
 			<!-- en esta linea cambiamos nuestro logo. -->
 			<div class="col-md-4"><a href="#home" data-ancla="home" class="off">
-				<img src="images/logogrande.png" alt="" class="logo"></a></div>
+				<img src="images/img_logo.png" alt="" class="logo"></a></div>
 			<div class="col-md-3"></div>
 			<div class="col-md-5">
 				<ul class='botonera'>
-					<li><a href="#nosotros" data-ancla="nosotros">Quienes somos</a></li>
+					<li><a href="#nosotros" data-ancla="nosotros">Nosotros</a></li>
 					<li><a href="#servicios" data-ancla="servicios">Productos</a></li>
 					<li><a href="#contacto" data-ancla="contacto">Contacto</a></li>
-
 				</ul>
-
 			</div>
 		</div>
 	</div>
 </header>
 
 <div class="principal vertical-centered-text" id="home">
-	<div class="col-md-8 cta"><h1>Malicius Culebra</h1> 
-			<h4>Somos banda under de Berazategui y estamos sacando un nuevo disco</h4>
-			<p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-<a  href="https://open.spotify.com/artist/2tYH34FkTCemctfG3gChQE" class="btn btn-primary orange">ESCCUCHA CULEBRRA</a>
-
-
-		</div>
+	<div class="col-md-8 cta"></div>
+  <div class="capa-oscura"></div>
+  <div class="caption">
+    <h1>MAROTE</h1> 
+		<h4>Somos una banda de Rock muy copada</h4>
+		<p>Estamos fisicamente en Buenos Aires pero viajamos por todo el pais para tocar el mejor Rock and Roll.</p>
+    <a  href="https://open.spotify.com/artist/2tYH34FkTCemctfG3gChQE" class="btn btn-primary orange">ESCUCHANOS</a>
+  </div>
 </div>
 
 <div class="nosotros orange" id="nosotros">
 	<div class="container">
 		<h1>Sobre nosotros</h1>
-		<p>Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!
-
-</p>
+		<p>La banda nacio hace un poco mas de 15 meses, con Juan Cruz (Guitarra principal) y Mauricio (Bajo), quienes tocaron los primeros acordes en diferentes bares de Buenos Aires. Luego de 6 meses, se unieron Ramon (Bateria) y Roxana (Teclado).
+    </p>
 	</div>
 </div>
-
 
 <div class="container servicios" id="servicios">
 	<div class="row">
