--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h1>MAROTE</h1> 
 		<h4>Somos una banda de Rock muy copada</h4>
 		<p>Estamos fisicamente en Buenos Aires pero viajamos por todo el pais para tocar el mejor Rock and Roll.</p>
-    <a  href="https://open.spotify.com/artist/2tYH34FkTCemctfG3gChQE" class="btn btn-primary orange">ESCUCHANOS</a>
+    <a  href="" class="btn btn-primary orange">ESCUCHANOS</a>
   </div>
 </div>
 
@@ -56,32 +56,31 @@
 <div class="container servicios" id="servicios">
 	<div class="row">
 		<div class="col-md-12">
-			<h1>Nuestros Servicios Locos</h1>
+			<h1>Nuestros Servicios</h1>
 		</div>
 	</div>
 	<div class="row images">
 		<div class="col-md-3">
 			<img src="images/001-electric-guitar-1.svg" alt="">
 			<h3>Extremo</h3>
-			<p>Start Bootstrap has everything you need to get your new website up and running in no time!</p>
+			<p>El metal extremo es un término utilizado para englobar los subgéneros de heavy metal más agresivos.</p>
 		</div>
 		<div class="col-md-3">
 			<img src="images/002-electric-guitar.svg" alt="">
 			<h3>Satanicos</h3>
-			<p>Start Bootstrap has everything you need to get your new website up and running in no time!</p>
+			<p>La relación entre el rock y el satánico proviene desde los mismos orígenes del movimiento musical en la década de los cincuenta.</p>
 		</div>
 		<div class="col-md-3">
 			<img src="images/003-maloik.svg" alt="">
-			<h3>Metal Loco</h3>
-			<p>Start Bootstrap has everything you need to get your new website up and running in no time!</p>
+			<h3>Metal</h3>
+			<p>El heavy metal es un género musical que nació a mediados de los años sesenta y principios de los setenta en el Reino Unido.</p>
 		</div>
 		<div class="col-md-3">
 			<img src="images/004-rock-symbol-of-a-hand.svg" alt="">
 			<h3>Rock Duro</h3>
-			<p>Start Bootstrap has everything you need to get your new website up and running in no time!</p>
+			<p>El hard rock es un subgénero vagamente definido de la música rock surgido a mediados de los sesenta.</p>
 		</div>
 	</div>
-	
 </div>
 
 <footer>
@@ -89,20 +88,16 @@
 		<div class="row">
 			<div class="col-md-12">
 					<h1>CONTACTO</h1><br><br>
-
 			</div>
 		</div>
 		<div class="row social">
 		<div class="col-3"></div>	
 					<div class="col-2">
-						<a href="mailto:contacto@maliciusculebra.com"><img src="images/001-mail.svg" alt=""></a></div>
-
+						<a href=""><img src="images/001-mail.svg" alt=""></a></div>
 					<div class="col-2">
-						<a href="https://www.facebook.com/maliciousculebrametal"  target="_blank"><img src="images/002-facebook-logo.svg" alt=""></a></div>
-
-
+						<a href=""  target="_blank"><img src="images/002-facebook-logo.svg" alt=""></a></div>
 					<div class="col-2">
-						<a target="_blank" href="https://www.instagram.com/jonatanariste/" ><img src="images/003-instagram-social-network-logo-of-photo-camera.svg" alt=""></a></div>	
+						<a href="" ><img src="images/003-instagram-social-network-logo-of-photo-camera.svg" alt=""></a></div>	
 	</div>
 </footer>
 <!-- Codigo que hace que las acciones de botones y cuestiones responsive funcionen-->
@@ -120,7 +115,6 @@ $('.top a').click(function(e){
         $('html, body').animate({scrollTop:offset}, 600);
         return false;
     });
-
 });
 	
 </script>
